<resources>
    <string-array name="number_list">
        <item>  please select  </item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="number_list_Second">
        <item>  please select  </item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string name="app_name">Quiz App</string>
    <string name="hint">Enter your solution...</string>
    <string name="secondLimit_hint">Set a time limit in second</string>
    <string name="Q1">Q1: What is the answer of 1 + 2?</string>
    <string name="Q2">Q2: What is the abbreviation of California?</string>
    <string name="Q1Submit">submit Q1</string>
    <string name="Q2Submit">submit Q2</string>
    <string name="chooser">Send message via...</string>

    <string name="Q1_Extra">Q1_Extra: What is the answer of 5*2?</string>

</resources>