<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".multipleChoice"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/editTextSecondDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/secondLimit_hint"
        />

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="234dp"
        android:layout_height="47dp"
        android:onClick="onClickSetTime"


        android:src="@drawable/android_robot" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="50dp"
        android:text="@string/Q1"
        />

    <Spinner
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginTop="40dp"
        android:entries="@array/number_list"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/Q1Submit"
        android:onClick="onClickQ1"
        />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="Stop the timer"
        android:onClick="onSwitchClicked"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:text="TextView"
        android:layout_gravity="center_horizontal"
        android:textSize="40dp"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:text="TextView"
        android:layout_gravity="center_horizontal"
        android:textSize="40dp"
        />

    <TextView
        android:id="@+id/textViewSecond"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="50dp"
        android:text="@string/Q1_Extra"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="A : 8" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="B : 5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="C : 10" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="D : 21" />

    <Spinner
        android:id="@+id/numberSecond"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginTop="40dp"
        android:entries="@array/number_list_Second" />

    <Button
        android:id="@+id/button_Extra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="SUBMIT Q1_Extra"
        />

</LinearLayout>

</ScrollView>